Fix menu paddings, add additional space for big screens

--- a/exampleSite/config.yml
+++ b/exampleSite/config.yml
@@ -1,6 +1,8 @@
+# hugo server --themesDir ...
+
 baseURL: http://example.org
 title: Rx Jersey
-theme: book
+theme: hugo-book
 
 # Book configuration
 disablePathToLower: true
