--- a/exampleSite/config.yml
+++ b/exampleSite/config.yml
@@ -7,6 +7,7 @@ theme: hugo-book
 
 # Book configuration
 disablePathToLower: true
+enableGitInfo: false
 
 params:
   # show or hide table of contents for page
@@ -14,12 +15,16 @@ params:
 
   # Set bundle to render side menu
   # if not specified file structure and weights will be used
-  BookMenuBundle: /menu  
+  BookMenuBundle: /menu
 
   # specify section of content to render as menu
   # if bookMenuBundle is not set, 'docs' is value by default
   BookSection: docs
 
+  # Set source repository location.
+  # Used for 'Last Modified' and 'Edit this page' links.
+  BookRepo: https://github.com/alex-shpak/hugo-book
+
   # Enable "Edit this page" links for 'doc' page type.
-  # Disabled by default. Uncomment to enable.
-  # BookEditURL: https://github.com/alex-shpak/hugo-book/edit/master/exampleSite/content/
+  # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
+  # BookEditPath: edit/master/exampleSite/content
