Disable enableGitInfo in travis

--- a/exampleSite/config.yml
+++ b/exampleSite/config.yml
@@ -28,4 +28,4 @@ params:
 
   # Enable "Edit this page" links for 'doc' page type.
   # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
-  # BookEditPath: edit/master/exampleSite/content
+  BookEditPath: edit/master/exampleSite/content
