--- a/exampleSite/config.yml
+++ b/exampleSite/config.yml
@@ -18,6 +18,9 @@ params:
   # if not specified file structure and weights will be used
   BookMenuBundle: /menu
 
+  # This value is duplicate of $link-color for making active link highlight in menu bundle mode
+  # BookMenuBundleActiveLinkColor: \#004ed0
+
   # specify section of content to render as menu
   # if bookMenuBundle is not set, 'docs' is value by default
   BookSection: docs
