--- a/exampleSite/config.yml
+++ b/exampleSite/config.yml
@@ -1,6 +1,6 @@
-# hugo server --themesDir ...
+# hugo server --themesDir ... --baseURL=http://0.0.0.0:1313/example
 
-baseURL: https://example.com/example/
+baseURL: https://example.com/
 title: Hugo Book
 theme: hugo-book
 disableKinds: ["taxonomy", "taxonomyTerm"]
