--- a/exampleSite/config.yml
+++ b/exampleSite/config.yml
@@ -47,3 +47,9 @@ params:
   # - In git information
   # - In blog posts
   BookDateFormat: "Jan 2, 2006"
+
+  # (Optional, default false) Show or hide site footer
+  BookShowFooter: false
+
+  # Copyright notice for footer
+  Copyright: ["&copy; 2019 Alex Shpak"]
