--- a/exampleSite/config.yml
+++ b/exampleSite/config.yml
@@ -1,4 +1,4 @@
-# hugo server --themesDir ... --baseURL=http://0.0.0.0:1313/example
+# hugo server --minify --themesDir ... --baseURL=http://0.0.0.0:1313/example
 
 baseURL: https://example.com/
 title: Hugo Book
