#52, Allow to set max showed levels of ToC. e.g. BookToC=3

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -15,9 +15,10 @@ enableGitInfo: true
 pygmentsCodeFences: true
 
 params:
-  # (Optional, default true) Show or hide table of contents globally
+  # (Optional, default 6) Set how many table of contents levels to be showed on page.
+  # Use false/off to hide ToC, note that 0 will default to 6 (https://gohugo.io/functions/default/)
   # You can also specify this parameter per page in front matter
-  BookShowToC: true
+  BookToC: 3
 
   # (Optional, default none) Set leaf bundle to render as side menu
   # When not specified file structure and weights will be used
