Update screenshots and theme tags

--- a/theme.toml
+++ b/theme.toml
@@ -6,7 +6,7 @@ license = "MIT"
 licenselink = "https://github.com/alex-shpak/hugo-book/blob/master/LICENSE"
 description = "Hugo documentation theme as simple as plain book"
 homepage = "https://github.com/alex-shpak/hugo-book"
-tags = ["responsive", "clean", "documentation", "docs", "flexbox"]
+tags = ["responsive", "clean", "documentation", "docs", "flexbox", "search", "mobile"]
 features = []
 min_version = "0.55"
 
