--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,8 @@ jobs:
   hugo:
     runs-on: ubuntu-18.04
     steps:
-    - name: Install Hugo
-      run: sudo apt-get install hugo
-    - name: Run Hugo
-      run: (cd exampleSite; hugo)
+      - uses: actions/checkout@master
+      - name: Install Hugo
+        run: sudo apt-get install hugo
+      - name: Run Hugo
+        run: (cd exampleSite; hugo)
