--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,10 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
       - uses: actions/checkout@master
+
       - name: Install Hugo
         run: sudo apt-get install hugo
+
       - name: Run Hugo
-        run: (cd exampleSite; hugo)
+        working-directory: exampleSite
+        run: hugo --themesDir ../..
