Download hugo from releases in workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,9 @@ jobs:
       - uses: actions/checkout@master
 
       - name: Install Hugo
-        run: sudo apt-get install hugo
+        run: |
+          wget https://github.com/gohugoio/hugo/releases/download/v0.57.2/hugo_0.57.2_Linux-64bit.deb -O /tmp/hugo.deb
+          sudo dpkg -i /tmp/hugo.deb
 
       - name: Run Hugo
         working-directory: exampleSite
