--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -20,6 +20,10 @@ pygmentsCodeFences = true
   # You can also specify this parameter per page in front matter
   BookToC = 3
 
+  # (Optional, default none) Set the path to a logo for the book. If the logo is
+  # /static/logo.png then the path would be /logo.png
+  # BookLogo = '/logo.png'
+
   # (Optional, default none) Set leaf bundle to render as side menu
   # When not specified file structure and weights will be used
   BookMenuBundle = '/menu'
