--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -33,7 +33,7 @@ params:
   BookSection: docs
 
   # (Optional) This value is duplicate of $link-color for making active link highlight in menu bundle mode
-  # BookMenuBundleActiveLinkColor: "\#004ed0"
+  # BookMenuBundleActiveLinkColor: "\#05b"
 
   # Set source repository location.
   # Used for 'Last Modified' and 'Edit this page' links.
