#51, Add experimental bookCollapseSection page param to hide nested sections

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -26,7 +26,7 @@ pygmentsCodeFences = true
 
   # (Optional, default none) Set leaf bundle to render as side menu
   # When not specified file structure and weights will be used
-  BookMenuBundle = '/menu'
+  # BookMenuBundle = '/menu'
 
   # (Optional, default docs) Specify section of content to render as menu
   # You can also set value to '*' to render all sections to menu
