--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -16,17 +16,17 @@ pygmentsCodeFences: true
 
 params:
   # (Optional, default 6) Set how many table of contents levels to be showed on page.
-  # Use false/off to hide ToC, note that 0 will default to 6 (https://gohugo.io/functions/default/)
+  # Use false to hide ToC, note that 0 will default to 6 (https://gohugo.io/functions/default/)
   # You can also specify this parameter per page in front matter
   BookToC: 3
 
   # (Optional, default none) Set the path to a logo for the book. If the logo is
-  # /static/logo.png then the path would be /logo.png
+  # /static/logo.png then the path would be logo.png
   # BookLogo: /logo.png
 
   # (Optional, default none) Set leaf bundle to render as side menu
   # When not specified file structure and weights will be used
-  BookMenuBundle: /menu
+  # BookMenuBundle: /menu
 
   # (Optional, default docs) Specify section of content to render as menu
   # You can also set value to '*' to render all sections to menu
