--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -15,7 +15,7 @@ enableGitInfo: true
 pygmentsCodeFences: true
 
 # Multilang config
-DefaultContentLanguage: en
+defaultContentLanguage: en
 
 languages:
   en:
