--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -17,15 +17,17 @@ pygmentsCodeFences = true
 defaultContentLanguage = 'en'
 
 [languages]
-  [languages.en]
-    languageName = 'English'
-    weight = 1
-  [languages.ru]
-    languageName = 'Russian'
-    weight = 2
-  [languages.cn]
-    languageName = 'Chinese'
-    weight = 3
+[languages.en]
+  languageName = 'English'
+  weight = 1
+
+[languages.ru]
+  languageName = 'Russian'
+  weight = 2
+
+[languages.cn]
+  languageName = 'Chinese'
+  weight = 3
 
 [params]
   # (Optional, default 6) Set how many table of contents levels to be showed on page.
@@ -63,7 +65,7 @@ defaultContentLanguage = 'en'
   # Index is built on fly, therefore it might slowdown your website.
   BookSearch = true
 
-  # (Optional, default none) Search config for flexsearch index.
+  # (Optional, default {}) Search config for flexsearch index.
   # Read documentation at https://github.com/nextapps-de/flexsearch#usage. By default 'balance' preset is used.
   # This option allows to set specific configs for languages support. Must be valid JavaScript object.
   BookSearchConfig = '{ cache: true }'
