--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -63,7 +63,7 @@ params:
   # Index is built on fly, therefore it might slowdown your website.
   BookSearch: true
 
-  # (Optional, default none) Search config for flexsearch index.
+  # (Optional, default {}) Search config for flexsearch index.
   # Read documentation at https://github.com/nextapps-de/flexsearch#usage. By default 'balance' preset is used.
   # This option allows to set specific configs for languages support. Must be valid JavaScript object.
   BookSearchConfig: |
