#106, Upgrade to hugo 0.60

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -9,9 +9,9 @@ disableKinds = ['taxonomy', 'taxonomyTerm']
 disablePathToLower = true
 enableGitInfo = true
 
-# Code highlight
-# pygmentsStyle = 'monokailight'
-pygmentsCodeFences = true
+# Needed for mermaid/katex shortcodes
+[markup.goldmark.renderer]
+unsafe = true
 
 # Multi-lingual mode config
 # There are different options to translate files
