--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -3,15 +3,17 @@
 baseURL: https://example.com/
 title: Hugo Book
 theme: hugo-book
-disableKinds: ['taxonomy', 'taxonomyTerm']
+disableKinds: ["taxonomy", "taxonomyTerm"]
 
 # Book configuration
 disablePathToLower: true
 enableGitInfo: true
 
-# Code highlight
-# pygmentsStyle: monokailight
-pygmentsCodeFences: true
+# Needed for mermaid/katex shortcodes
+markup:
+  goldmark:
+    renderer:
+      unsafe: true
 
 # Multi-lingual mode config
 # There are different options to translate files
@@ -61,7 +63,7 @@ params:
   # Configure the date format used on the pages
   # - In git information
   # - In blog posts
-  BookDateFormat: 'Jan 2, 2006'
+  BookDateFormat: "Jan 2, 2006"
 
   # (Optional, default true) Enables search function with flexsearch,
   # Index is built on fly, therefore it might slowdown your website.
