Set toc starting level to 1

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -10,8 +10,12 @@ disablePathToLower = true
 enableGitInfo = true
 
 # Needed for mermaid/katex shortcodes
+[markup]
 [markup.goldmark.renderer]
-unsafe = true
+  unsafe = true
+
+[markup.tableOfContents]
+  startLevel = 1
 
 # Multi-lingual mode config
 # There are different options to translate files
