Update disqus support, add global site config BookDisqus

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -72,3 +72,7 @@ enableGitInfo = true
   # Index is built on fly, therefore it might slowdown your website.
   BookSearch = true
 
+  # (Optional, default true) Enables disqus template on pages
+  # See https://gohugo.io/content-management/comments/#configure-disqus
+  # Can be overwritten by same param in page frontmatter
+  BookDisqus = true
