--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -69,3 +69,8 @@ params:
   # (Optional, default true) Enables search function with flexsearch,
   # Index is built on fly, therefore it might slowdown your website.
   BookSearch: true
+
+  # (Optional, default true) Enables disqus template on pages
+  # See https://gohugo.io/content-management/comments/#configure-disqus
+  # Can be overwritten by same param in page frontmatter
+  BookDisqus: true
