disable default Highlight

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -16,6 +16,9 @@ enableGitInfo = true
 [markup.tableOfContents]
   startLevel = 1
 
+[markup.highlight]
+  codeFences = false
+
 # Multi-lingual mode config
 # There are different options to translate files
 # See https://gohugo.io/content-management/multilingual/#translation-by-filename
