Add support for hugo menus

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -36,6 +36,18 @@ enableGitInfo = true
   contentDir = 'content.cn'
   weight = 3
 
+[menu]
+# [[menu.before]]
+[[menu.after]]
+  name = "Github"
+  url = "https://github.com/alex-shpak/hugo-book"
+  weight = 10
+
+[[menu.after]]
+  name = "Hugo Themes"
+  url = "https://themes.gohugo.io/hugo-book/"
+  weight = 20
+
 [params]
   # (Optional, default true) Controls table of contents visibility on right side of pages.
   # Start and end levels can be controlled with markup.tableOfContents setting.
