--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -34,6 +34,16 @@ languages:
     contentDir: content.cn
     weight: 3
 
+menu:
+  # before: []
+  after:
+    - name: "Github"
+      url: "https://github.com/alex-shpak/hugo-book"
+      weight: 10
+    - name: "Hugo Themes"
+      url: "https://themes.gohugo.io/hugo-book/"
+      weight: 20
+
 params:
   # (Optional, default true) Controls table of contents visibility on right side of pages.
   # Start and end levels can be controlled with markup.tableOfContents setting.
