Add Monako Git Links

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -96,3 +96,7 @@ enableGitInfo = true
   # Portable links meant to work with text editors and let you write markdown without {{< relref >}} shortcode
   # Theme will print warning if page referenced in markdown does not exists.
   BookPortableLinks = true
+
+  # Monako specific feature. Monako will append Git information of every origin
+  # to the frontmatter.
+  MonakoGitLinks = true
