--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -62,9 +62,10 @@ enableGitInfo = true
   # When not specified file structure and weights will be used
   # BookMenuBundle = '/menu'
 
-  # (Optional, default docs) Specify section of content to render as menu
-  # You can also set value to '*' to render all sections to menu
-  BookSection = 'docs'
+  # (Optional, default docs) Specify root page to render child pages as menu.
+  # Page is resoled by .GetPage function: https://gohugo.io/functions/getpage/
+  # For backward compatibility you can set '*' to render all sections to menu. Acts same as '/'
+  BookSection = '/'
 
   # Set source repository location.
   # Used for 'Last Modified' and 'Edit this page' links.
@@ -78,7 +79,7 @@ enableGitInfo = true
   # Configure the date format used on the pages
   # - In git information
   # - In blog posts
-  BookDateFormat = 'Jan 2, 2006'
+  BookDateFormat = 'January 2, 2006'
 
   # (Optional, default true) Enables search function with flexsearch,
   # Index is built on fly, therefore it might slowdown your website.
