--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -58,8 +58,9 @@ params:
   # When not specified file structure and weights will be used
   # BookMenuBundle: /menu
 
-  # (Optional, default docs) Specify section of content to render as menu
-  # You can also set value to '*' to render all sections to menu
+  # (Optional, default docs) Specify root page to render child pages as menu.
+  # Page is resoled by .GetPage function: https://gohugo.io/functions/getpage/
+  # For backward compatibility you can set '*' to render all sections to menu. Acts same as '/'
   BookSection: docs
 
   # Set source repository location.
@@ -74,7 +75,7 @@ params:
   # Configure the date format used on the pages
   # - In git information
   # - In blog posts
-  BookDateFormat: "Jan 2, 2006"
+  BookDateFormat: "January 2, 2006"
 
   # (Optional, default true) Enables search function with flexsearch,
   # Index is built on fly, therefore it might slowdown your website.
