Edit this page content dir lang independent
#200

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -73,8 +73,8 @@ enableGitInfo = true
 
   # Enable "Edit this page" links for 'doc' page type.
   # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
-  # Path must point to 'content' directory of repo.
-  BookEditPath = 'edit/master/exampleSite/content'
+  # Edit path must point to root directory of repo.
+  BookEditPath = 'edit/master/exampleSite'
 
   # Configure the date format used on the pages
   # - In git information
