--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -69,8 +69,8 @@ params:
 
   # Enable "Edit this page" links for 'doc' page type.
   # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
-  # Path must point to 'content' directory of repo.
-  BookEditPath: edit/master/exampleSite/content
+  # Edit path must point to root directory of repo.
+  BookEditPath: edit/master/exampleSite
 
   # Configure the date format used on the pages
   # - In git information
