feat: make SRI configurable

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -101,3 +101,7 @@ params:
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables service worker that caches visited pages and resources for offline use.
   BookServiceWorker: true
+
+  # Disable the use of sub-resource integrity on CSS/JS assets (default: false)
+  # Useful if you're using a CDN or other host where you can't control cache headers
+  disable_sri: false
