--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -108,4 +108,4 @@ enableGitInfo = true
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables a drop-down menu for translations only if a translation is present.
-  OnlyTranslated = true
+  BookTranslatedOnly = true
