Set BookTranslatedOnly to false for example site

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -104,4 +104,4 @@ params:
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables a drop-down menu for translations only if a translation is present.
-  BookTranslatedOnly: true
+  BookTranslatedOnly: false
