--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -81,7 +81,7 @@ params:
   # Enable "Edit this page" links for 'doc' page type.
   # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
   # Edit path must point to root directory of repo.
-  BookEditPath: edit/master/exampleSite
+  BookEditPath: edit/main/exampleSite
 
   # Configure the date format used on the pages
   # - In git information
