Revert "🐞 fix issues 352"
This reverts commit 58f8935d1e2348d7c9aa03ca2fac8049f486ad3d.

--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -3,7 +3,6 @@
 baseURL: https://example.com/
 title: Hugo Book
 theme: hugo-book
-# defaultContentLanguage: en
 
 # Book configuration
 disablePathToLower: true
@@ -24,7 +23,7 @@ markup:
 languages:
   en:
     languageName: English
-    contentDir: content.en
+    contentDir: content
     weight: 1
   ru:
     languageName: Russian
