--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -3,7 +3,6 @@
 baseURL = 'https://example.com/'
 title = 'Hugo Book'
 theme = 'hugo-book'
-# defaultContentLanguage = "en"
 
 # Book configuration
 disablePathToLower = true
@@ -24,7 +23,7 @@ enableGitInfo = true
 [languages]
 [languages.en]
   languageName = 'English'
-  contentDir = 'content.en'
+  contentDir = 'content'
   weight = 1
 
 [languages.ru]
