--- a/theme.toml
+++ b/theme.toml
@@ -1,11 +1,11 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Book"
+name = "Decentraland Theme"
 license = "MIT"
-licenselink = "https://github.com/alex-shpak/hugo-book/blob/master/LICENSE"
+licenselink = "https://github.com/decentraland/documentation-theme/blob/master/LICENSE"
 description = "Hugo documentation theme as simple as plain book"
-homepage = "https://github.com/alex-shpak/hugo-book"
+homepage = "https://github.com/decentraland/documentation-theme"
 demosite = "https://hugo-book-demo.netlify.app"
 tags = ["responsive", "clean", "documentation", "docs", "flexbox", "search", "mobile", "multilingual", "disqus"]
 features = []
