--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,7 +1,7 @@
 # hugo server --minify --themesDir ... --baseURL=http://0.0.0.0:1313/theme/hugo-book/
 
 baseURL = 'https://documentation-theme.pages.dev/'
-title = 'Decentraland Documentation'
+title = 'DCL docs theme'
 theme = 'documentation-theme'
 
 # Book configuration
