--- a/exampleSite/config.yaml
+++ b/exampleSite/config.yaml
@@ -1,6 +1,6 @@
 # hugo server --minify --themesDir ... --baseURL=http://0.0.0.0:1313/theme/hugo-book/
 
-baseURL: https://example.com/
+baseURL: https://decentraland.github.io/documentation-theme/
 title: Hugo Book
 theme: documentation-theme
 
