--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,6 +1,6 @@
 # hugo server --minify --themesDir ... --baseURL=http://0.0.0.0:1313/theme/hugo-book/
 
-baseURL = 'https://documentation-theme.pages.dev/'
+baseURL = 'https://decentraland.github.io/documentation-theme/'
 title = 'DCL docs theme'
 theme = 'documentation-theme'
 
