Make sure ToC is showed in terms, set bookToC to be none by default

--- a/exampleSite/hugo.yaml
+++ b/exampleSite/hugo.yaml
@@ -69,10 +69,10 @@ params:
   # Theme 'auto' switches between dark and light modes based on browser/os preferences
   BookTheme: "light"
 
-  # (Optional, default true) Controls table of contents visibility on right side of pages.
+  # (Optional, default none) Controls table of contents visibility on right side of pages.
   # Start and end levels can be controlled with markup.tableOfContents setting.
   # You can also specify this parameter per page in front matter.
-  BookToC: true
+  # BookToC: true
 
   # (Optional, default favicon.png) Set the path to a favicon file.
   # If the favicon is /static/favicon.png then the path would be favicon.png
