--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -81,10 +81,10 @@ enableGitInfo = true
   # Theme 'auto' switches between dark and light modes based on browser/os preferences
   BookTheme = 'light'
 
-  # (Optional, default true) Controls table of contents visibility on right side of pages.
+  # (Optional, default none) Controls table of contents visibility on right side of pages.
   # Start and end levels can be controlled with markup.tableOfContents setting.
   # You can also specify this parameter per page in front matter.
-  BookToC = true
+  # BookToC = true
 
   # (Optional, default favicon.png) Set the path to a favicon file.
   # If the favicon is /static/favicon.png then the path would be favicon.png
