--- a/exampleSite/hugo.yaml
+++ b/exampleSite/hugo.yaml
@@ -124,7 +124,8 @@ params:
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables service worker that caches visited pages and resources for offline use.
-  BookServiceWorker: true
+  # can be false, true or 'precache', precache will try to download all content pages on install.
+  BookServiceWorker: 'precache'
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables a drop-down menu for translations only if a translation is present.
