--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -41,40 +41,40 @@ enableGitInfo = true
 
 [menu]
 [[menu.home]]
-  name = "Documentation"
-  pageRef = "/docs/example/"
+  name = 'Documentation'
+  pageRef = '/docs/example/'
   weight = 1
 
 [[menu.home]]
-  pageRef = "/docs/example/"
+  pageRef = '/docs/example/'
   weight = 10
-  parent = "Documentation"
+  parent = 'Documentation'
 
 [[menu.home]]
-  name = "Shortcodes"
-  pageRef = "/docs/shortcodes/badges/"
+  name = 'Shortcodes'
+  pageRef = '/docs/shortcodes/badges/'
   weight = 20
-  parent = "Documentation"
+  parent = 'Documentation'
 
 [[menu.home]]
-  name = "Showcases"
-  pageRef = "/showcases/"
+  name = 'Showcases'
+  pageRef = '/showcases/'
   weight = 2
 
 [[menu.home]]
-  name = "Github"
-  url = "https://github.com/alex-shpak/hugo-book/"
+  name = 'Github'
+  url = 'https://github.com/alex-shpak/hugo-book/'
   weight = 3
 
 # [[menu.before]]
 [[menu.after]]
-  name = "Github"
-  url = "https://github.com/alex-shpak/hugo-book/"
+  name = 'Github'
+  url = 'https://github.com/alex-shpak/hugo-book/'
   weight = 10
 
 [[menu.after]]
-  name = "Hugo Themes"
-  url = "https://themes.gohugo.io/themes/hugo-book/"
+  name = 'Hugo Themes'
+  url = 'https://themes.gohugo.io/themes/hugo-book/'
   weight = 20
 
 [params]
@@ -138,7 +138,7 @@ enableGitInfo = true
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables service worker that caches visited pages and resources for offline use.
-  BookServiceWorker = "precache"
+  BookServiceWorker = 'precache'
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables a drop-down menu for translations only if a translation is present.
