Update code highlight theme in exampleSite to base16-snazzy

--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -18,6 +18,9 @@ enableGitInfo = true
 [markup.tableOfContents]
   startLevel = 1
 
+[markup.highlight]
+  style = 'base16-snazzy'
+
 # Multi-lingual mode config
 # There are different options to translate files
 # See https://gohugo.io/content-management/multilingual/#translation-by-filename
