--- a/exampleSite/hugo.yaml
+++ b/exampleSite/hugo.yaml
@@ -17,6 +17,8 @@ markup:
       unsafe: true
   tableOfContents:
     startLevel: 1
+  highlight:
+    style: base16-snazzy
 
 # Multi-lingual mode config
 # There are different options to translate files
